# CH_GPT

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/bot/: formatting.py  runner.py
app/core/: analyzer.py  history_overrides.py  models.py  scoring.py
app/providers/: base.py  ccxt_provider.py  mexc_futures.py  registry.py  tradingview.py
app/storage/: cache.py
outputs/tradingview-chart-selector-bot/: pyproject.toml  railway.json  requirements.txt
outputs/tradingview-chart-selector-bot/app/bot/: formatting.py
outputs/tradingview-chart-selector-bot/app/core/: analyzer.py  config.py  models.py  scoring.py
outputs/tradingview-chart-selector-bot/app/providers/: __init__.py  ccxt_provider.py  mexc_futures.py  tradingview.py
outputs/tradingview-chart-selector-bot/app/scheduler/: __init__.py
outputs/tradingview-chart-selector-bot/tests/: test_analyzer.py  test_mexc_futures.py  test_scoring.py  test_tradingview.py
outputs/tradingview-chart-selector-bot/tools/: tv_probe.py
tests/: test_analyzer.py  test_ccxt_provider.py  test_history_overrides.py  test_mexc_futures.py  test_scoring.py  test_tradingview.py
