[project]
name = "tradingview-chart-selector-bot"
version = "0.1.0"
description = "Telegram bot that ranks crypto exchange charts for TradingView analysis."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.8,<4",
    "ccxt>=4.3,<5",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
